--- a/chess-meeting-frontend/src/components/css/SignIn.css
+++ b/chess-meeting-frontend/src/components/css/SignIn.css
@@ -41,7 +41,7 @@ email-shorten{
     font-family: "Roboto", sans-serif;
     text-transform: uppercase;
     outline: 0;
-    background: #0011fd;
+    background: rgb(25,100,126);
     width: 100%;
     border: 0;
     padding: 15px;
@@ -55,7 +55,9 @@ email-shorten{
 
 
 .form-login button:hover,.form button:active,.form button:focus {
-    background: #5a09f0;
+    background: rgb(25,100,126);
+    color: white;
+    font-weight: bold;
 }
 .form-login .message {
     margin: 15px 0 0;
@@ -106,10 +108,8 @@ email-shorten{
 .signin-section{
     width: 100vw;
     height: 100vh;
-    background: #570FF0;
-    background: -moz-linear-gradient(top, #570FF0 0%, #7C3EF4 100%);
-    background: -webkit-linear-gradient(top, #570FF0 0%, #7C3EF4 100%);
-    background: linear-gradient(to bottom, #570FF0 0%, #7C3EF4 100%);
+    background: rgb(25,100,126);
+    background: linear-gradient(0deg, rgba(25,100,126,1) 0%, rgba(40,175,176,1) 100%);
     font-family: "Quicksand";
     display: flex;
     flex-direction: column;
@@ -186,4 +186,13 @@ email-shorten{
     /*-ms-transform: scale(1.1);*/
     /*transform: scale(1.1);*/
 
+}
+
+.backgroundImage{
+    opacity: 0.6;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: auto;
 }
