--- a/chess-meeting-frontend/src/components/css/SignIn.css
+++ b/chess-meeting-frontend/src/components/css/SignIn.css
@@ -65,7 +65,7 @@ email-shorten{
     font-size: 12px;
 }
 .form-login .message a {
-    color: #4CAF50;
+    color: #281b9d;
     text-decoration: none;
     font-weight: bold;
     cursor: pointer;
