--- a/chess-meeting-frontend/src/components/css/UserNavbar.css
+++ b/chess-meeting-frontend/src/components/css/UserNavbar.css
@@ -42,6 +42,17 @@ ul li a .contact {
   margin-right: auto;
 }
 
+.nav-admin {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  background: linear-gradient(to bottom, #8c0f2c, #fc1414);
+  color: white;
+}
+.nav-admin .slam-left {
+  margin-right: auto;
+}
+
 @media all and (max-width: 500px) {
   ul {
     padding: 0;
@@ -64,6 +75,19 @@ ul li a .contact {
     align-items: center;
   }
   .nav-user .slam-left {
+    margin-right: 0;
+  }
+
+  .nav-admin {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+  }
+  .nav-admin .slam-left {
     margin-right: 0;
   }
 }
