--- a/chess-meeting-frontend/src/components/css/UserNavbar.scss
+++ b/chess-meeting-frontend/src/components/css/UserNavbar.scss
@@ -53,6 +53,17 @@ ul {
   }
 }
 
+.nav-admin {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  background: linear-gradient(to bottom, #8c0f2c, #fc1414);
+  color: white;
+  .slam-left {
+    margin-right: auto;
+  }
+}
+
 @media all and (max-width: 500px) {
   ul {
     padding: 0;
@@ -65,6 +76,19 @@ ul {
     }
   }
   .nav-user {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    .slam-left {
+      margin-right: 0;
+    }
+  }
+  .nav-admin {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
     -ms-flex-direction: column;
