--- a/chess-meeting-frontend/src/App.css
+++ b/chess-meeting-frontend/src/App.css
@@ -4,7 +4,8 @@
   flex-direction: column;
   font-family: "Quicksand";
   background-color: rgba(165, 165, 245, 0.27);
-  height: 100vh;
+  position: fixed;
+  height: auto;
   width: 100vw;
 }
 
