--- a/chess-meeting-frontend/src/components/css/Reservations.scss
+++ b/chess-meeting-frontend/src/components/css/Reservations.scss
@@ -172,3 +172,9 @@ h1 {
   width: 100vw;
   align-items: center;
 }
+
+//.overview-section{
+//  position: relative;
+//  overflow-x: scroll;
+//  overflow-y: scroll;
+//}
