--- a/chess-meeting-frontend/src/components/css/UserNavbar.scss
+++ b/chess-meeting-frontend/src/components/css/UserNavbar.scss
@@ -63,6 +63,11 @@ ul {
     margin-right: auto;
   }
 }
+//
+//.navbar-div{
+//  top: 0;
+//  left: 0;
+//}
 
 @media all and (max-width: 500px) {
   ul {
@@ -102,3 +107,4 @@ ul {
     }
   }
 }
+
